crates/biome_cli/tests/snapshots/main_cases_javascript/host_and_css_suppressions_are_both_used.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome lint --error-on-warnings file.js
```

## `biome.json`

```json
{
  "javascript": { "experimentalEmbeddedSnippetsEnabled": true },
  "linter": {
    "rules": {
      "recommended": false,
      "correctness": { "noUnknownProperty": "error" }
    }
  }
}
```

## `file.js`

```js
// biome-ignore-start lint/correctness/noUnknownProperty: temporary migration
const ignored = styled.div`
  /* biome-ignore lint/correctness/noUnknownProperty: generated declaration */
  colr: red;
  backgrond-color: red;
`;
// biome-ignore-end lint/correctness/noUnknownProperty: temporary migration
```

# Emitted Messages

```block
biome.json:3:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    1 │ {
    2 │   "javascript": { "experimentalEmbeddedSnippetsEnabled": true },
  > 3 │   "linter": {
      │             ^
  > 4 │     "rules": {
  > 5 │       "recommended": false,
  > 6 │       "correctness": { "noUnknownProperty": "error" }
  > 7 │     }
  > 8 │   }
      │   ^
    9 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
```
