crates/biome_cli/tests/snapshots/main_cases_javascript/javascript_comments_suppress_embedded_css_and_graphql_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome lint file.js
```

## `biome.json`

```json
{
  "javascript": { "experimentalEmbeddedSnippetsEnabled": true },
  "linter": {
    "rules": {
      "recommended": false,
      "correctness": {
        "useGraphqlNamedOperations": "error",
        "noUnknownProperty": "error"
      }
    }
  }
}
```

## `file.js`

```js
// biome-ignore lint/correctness/useGraphqlNamedOperations: expected anonymous query
const first = gql`query { people { name } }`;
const second = gql`query { people { name } }`;
// biome-ignore lint/correctness/noUnknownProperty: expected typo
const ignored = styled.div`colr: red;`;
const reported = styled.div`colr: red;`;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome.json:3:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     1 │ {
     2 │   "javascript": { "experimentalEmbeddedSnippetsEnabled": true },
   > 3 │   "linter": {
       │             ^
   > 4 │     "rules": {
        ...
   > 9 │       }
  > 10 │     }
  > 11 │   }
       │   ^
    12 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
file.js:3:20 lint/correctness/useGraphqlNamedOperations  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Anonymous GraphQL operations are forbidden. Make sure to name your query.
  
    1 │ // biome-ignore lint/correctness/useGraphqlNamedOperations: expected anonymous query
    2 │ const first = gql`query { people { name } }`;
  > 3 │ const second = gql`query { people { name } }`;
      │                    ^^^^^
    4 │ // biome-ignore lint/correctness/noUnknownProperty: expected typo
    5 │ const ignored = styled.div`colr: red;`;
  
  i Most GraphQL client libraries use the operation name for caching purposes.
  
  i Unsafe fix: Rename this query to People.
  
    1 │ query·People{·people·{·name·}·}
      │       ++++++                   

```

```block
file.js:6:29 lint/correctness/noUnknownProperty ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unknown property is not allowed.
  
    4 │ // biome-ignore lint/correctness/noUnknownProperty: expected typo
    5 │ const ignored = styled.div`colr: red;`;
  > 6 │ const reported = styled.div`colr: red;`;
      │                             ^^^^
  
  i See CSS Specifications and browser specific properties for more details.
  
  i To resolve this issue, replace the unknown property with a valid CSS property.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
