crates/biome_cli/tests/snapshots/main_cases_javascript/should_apply_fixes_to_embedded_languages.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.js
```

## `biome.json`

```json
{
  "javascript": {
    "experimentalEmbeddedSnippetsEnabled": true,
    "formatter": {
      "enabled": true
    },
    "linter": {
      "enabled": true
    },
    "assist": {
      "enabled": true
    }
  },
  "assist": {
    "actions": {
      "source": {
        "useSortedProperties": "on"
      }
    }
  }
}
```

## `file.js`

```js
const _Foo = gql`
	query People {
		people(id: $personId) {
			name
		}
	}
`;
const _Baz = styled.div`
	background-color: red;
	align: center;
	padding: 0;
`;

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:10:2 lint/correctness/noUnknownProperty ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unknown property is not allowed.
  
     8 │ const _Baz = styled.div`
     9 │ 	background-color: red;
  > 10 │ 	align: center;
       │ 	^^^^^
    11 │ 	padding: 0;
    12 │ `;
  
  i See CSS Specifications and browser specific properties for more details.
  
  i To resolve this issue, replace the unknown property with a valid CSS property.
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
Found 1 error.
```
