crates/biome_cli/tests/snapshots/main_cases_javascript/should_pull_diagnostics_from_embedded_languages_when_formatting.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.js
```

## `biome.json`

```json
{
  "javascript": {
    "experimentalEmbeddedSnippetsEnabled": true,
    "formatter": {
      "enabled": true
    }
  }
}
```

## `file.js`

```js
const Foo = gql`query { people(id: ) { }`;
const Bar = styled.div`background-color: ; align: center; padding: 0;`;

```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - file.js
  


```

# Emitted Messages

```block
file.js:1:36 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a value but instead found ')'.
  
  > 1 │ const Foo = gql`query { people(id: ) { }`;
      │                                    ^
    2 │ const Bar = styled.div`background-color: ; align: center; padding: 0;`;
    3 │ 
  
  i Expected a value here.
  
  > 1 │ const Foo = gql`query { people(id: ) { }`;
      │                                    ^
    2 │ const Bar = styled.div`background-color: ; align: center; padding: 0;`;
    3 │ 
  

```

```block
file.js:1:41 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `}` but instead the file ends
  
  > 1 │ const Foo = gql`query { people(id: ) { }`;
      │                                         
    2 │ const Bar = styled.div`background-color: ; align: center; padding: 0;`;
    3 │ 
  
  i the file ends here
  
  > 1 │ const Foo = gql`query { people(id: ) { }`;
      │                                         
    2 │ const Bar = styled.div`background-color: ; align: center; padding: 0;`;
    3 │ 
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  

```

```block
Formatted 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
